fixed overlap of active state items in the mini toolbar

--- a/dev/scss/components/item/_item_mini.scss
+++ b/dev/scss/components/item/_item_mini.scss
@@ -5,6 +5,7 @@
 
   .escort-item {
     line-height: $base-size * 0.75;
+    height: $base-size * 0.75;
     min-width: $base-size * 0.75;
     padding: 0 ($padding * 0.66)
   }
